# ChordAnalyzer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: macos-build.yml  windows-build.yml
src/: ChordAnalysis.cpp  ChordAnalysis.h  LiveMidiState.cpp  LiveMidiState.h  Main.cpp  MainComponent.cpp  MainComponent.h
tests/: ChordAnalysisTests.cpp
